# oxfplayer

./: .gitignore
player/: .gitignore  .gitmodules  CMakeLists.txt  README.md
player/src/: CMakeLists.txt
setup/: Setup.iss  setup_private.iss
